<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guilhermesborz.addcontato.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_height="250dp"
                android:layout_width="match_parent"
                android:src="@drawable/perfil"
                android:scaleType="centerInside"
                android:background="#000000"
                android:layout_marginBottom="@dimen/margem_imagem_texto"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:src="@drawable/navegacao_anonima"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="@dimen/margem_direita_Orient_vert"
                    android:scaleType="fitCenter" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView android:text="@string/salvar_em" android:layout_width="wrap_content"
                        style="@style/Fonte_Hint"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margem_inferior"
                        android:layout_marginTop="10dp"/>

                    <EditText android:hint="@string/usuario_gmail_com" android:layout_width="wrap_content"
                        style="@style/Fonte_Hint"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margem_inferior"/>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView

                    android:layout_width="@dimen/icone_lateral"
                    android:layout_height="@dimen/icone_lateral"
                    android:src="@drawable/perfil_2"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="@dimen/margem_direita_Orient_vert"
                    android:scaleType="fitCenter" />

                <EditText
                    android:hint="@string/nome"
                    style="@style/Fonte_Hint"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView

                    android:layout_width="@dimen/icone_lateral"
                    android:layout_height="@dimen/icone_lateral"
                    android:layout_marginTop="35dp"
                    android:src="@drawable/telefone"
                    android:layout_marginRight="@dimen/margem_direita_Orient_vert"
                    android:scaleType="fitCenter" />


                <EditText  android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    style="@style/Fonte_Hint"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/margem_inferior"
                    android:inputType="number"/>

            </LinearLayout>


            <EditText
                android:layout_marginLeft="@dimen/margem_lateral_esq_sem_icone"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular"
                style="@style/Fonte_Hint"
                android:layout_marginBottom="@dimen/margem_inferior"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/vertical_margem_lateral"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="@dimen/icone_lateral"
                    android:layout_height="@dimen/icone_lateral"
                    android:src="@drawable/carta"
                    android:layout_marginRight="@dimen/margem_direita_Orient_vert"
                    android:layout_marginTop="15dp"
                    android:scaleType="fitCenter" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margem_top"
                    android:hint="@string/email"
                    style="@style/Fonte_Hint"
                    android:layout_marginBottom="@dimen/margem_inferior"
                    />

            </LinearLayout>

            <EditText
                android:layout_marginLeft="@dimen/margem_lateral_esq_sem_icone"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/residencial"
               style="@style/Fonte_Hint"
                android:paddingLeft="@dimen/vertical_margem_lateral"
                android:layout_marginBottom="@dimen/margem_inferior"
                />
            <Button android:text="@string/mais_campos" android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                style="@style/TemaBotao"
                android:textAlignment="center"
                android:paddingLeft="40dp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
